docs(maven):补充maven使用